--- a/day04/实训CSS。html.html
+++ b/day04/实训CSS。html.html
@@ -8,7 +8,7 @@
 <div class="header" >
     <a href="http://zh.learnlayout.com/">
         <img src="logo.jpg" alt="CSS">
-        <span>学习CSS布局</span>
+        <p>学习CSS布局</p>
     </a>
 </div>
 
