--- a/day05/别人的代码.html
+++ b/day05/别人的代码.html
@@ -28,7 +28,7 @@
         <img src="baidu.png" alt="百度LOGO">
     </div>
     <div class="count">
-        <input type="text" id="text" onFocus="style=" border: #3385FF"" onBlur="" onkeydown="keydown()" />
+        <input type="text" id="text" onFocus="style=" border: #3385FF onBlur="" onkeydown="keydown()" />
         <input type="submit" class="btn" value="百度一下" onclick="message()" />
     </div>
 </div>
