--- a/day10/Flex 布局教程：语法篇.html
+++ b/day10/Flex 布局教程：语法篇.html
@@ -18,12 +18,14 @@
 
 
 <style>
-    .content{
+    .content {
         display: flex;
         width: 800px;
-        height: 200px;
+        height:800px;
         flex-wrap: wrap;
-        align-content: center;
+        background: #b1b3b0;
+        justify-content: center;
+
     }
 
 </style>
