--- a/day15/发现好货区修改版.html
+++ b/day15/发现好货区修改版.html
@@ -7,7 +7,7 @@
 <body>
 <div style="width: 1190px;margin: 0 auto">
     <div class="left">
-        <div>
+        <div style="margin-left: 20px">
             <span style="font-size: 20px">觅me</span>
             <img src="icon-01.jpg">
             <span style="color: #b1b3b0">探索生活</span>
