--- a/day06/flex布局.html
+++ b/day06/flex布局.html
@@ -7,7 +7,7 @@
 <body>
 <div class="wrapper">
     <div class="left">左栏</div>
-    <div class="middle"><img src="ilta.png" width="800px"></div>
+    <div class="middle"></div>
     <div class="right">右栏</div>
 </div>
 <style>
@@ -21,7 +21,7 @@
     }
     .middle{
         width: 100%;
-        background: white;
+        background: greenyellow;
         margin-left: 10px;
         margin-right: 10px;
     }
