--- a/day14/京东秒杀区.html
+++ b/day14/京东秒杀区.html
@@ -17,12 +17,11 @@
         <div class="jd-c">
             本场距离结束还剩
         </div>
-        <div class="jd-d">
-            <div><span>00</span></div>
+        <div class="skill-d">
+            <span>00</span>
+            <span>07</span>
+            <span>15</span>
         </div>
-        <div><span>07</span></div>
-    </div>
-    <!--<div><span>15</span></div></div>-->
 </div>
 </div>
 <!--以上是京东秒杀左边-->
@@ -35,9 +34,9 @@
                 <img src="img/sk-01.jpg">
                 <p class="sk-desc">玉品堂 TR老花镜超轻 男女款便携老光眼镜 清晰舒适老花眼镜7001 7001红色 150度（建议50-54岁）</p>
             </div>
-            <div>
-                <span><i>￥</i>2188.00</span>
-                <span><s>￥4049.00</s></span>
+            <div class="price">
+                <span class="price-new"><i>￥</i>2188.00</span>
+                <span class="price-old"><s>￥4049.00</s></span>
             </div>
         </li>
         <!--第一个图片的样式-->
@@ -46,9 +45,9 @@
                 <img src="img/sk-02.jpg">
                 <p class="sk-desc">维达(Vinda) 卷纸 蓝色经典4层200g卫生纸*27卷(整箱销售)</p>
             </div>
-            <div>
-                <span><i>￥</i>79.80</span>
-                <span><s>￥124.00</s></span>
+            <div class="price">
+                <span class="price-new"><i>￥</i>79.80</span>
+                <span class="price-old"><s>￥124.00</s></span>
             </div>
         </li>
         <!--第二个图片样式-->
@@ -57,9 +56,9 @@
                 <img src="img/sk-03.jpg">
                 <p class="sk-desc">锤子（smartisan） 坚果 3 4G+64GB 酒红色 全面屏双摄  全网通4G手机 双卡双待</p>
             </div>
-            <div>
-                <span><i>￥</i>1198.00</span>
-                <span><s>￥1590.00</s></span>
+            <div class="price">
+                <span class="price-new"><i>￥</i>1198.00</span>
+                <span class="price-old"><s>￥1590.00</s></span>
             </div>
         </li>
         <!--第三个图片样式-->
@@ -68,9 +67,9 @@
                 <img src="img/sk-04.jpg">
                 <p class="sk-desc">越南进口红心火龙果 4个装 单果约350~420g 新鲜水果</p>
             </div>
-            <div>
-                <span><i>￥</i>24.90</span>
-                <span><s>￥73.90</s></span>
+            <div class="price">
+                <span class="price-new"><i>￥</i>24.90</span>
+                <span class="price-old"><s>￥73.90</s></span>
             </div>
         </li>
         <!--第四个图片样式-->
@@ -81,5 +80,6 @@
     <img src="img/sk-05.jpg" width="180" height="260">
 </div>
 </div>
+
 </body>
 </html>
