--- a/前端学习第一个月/day06/三栏布局.html
+++ b/前端学习第一个月/day06/三栏布局.html
@@ -8,11 +8,11 @@
 <div class="left">左栏</div>
 <div class="right">右栏</div>
 <div class="middle">中间栏</div>
-<div>
-    <div class="left-1">左栏</div>
-    <div class="middle-1">中间栏</div>
-    <div class="right-1">右栏</div>
-</div>
+<!--<div>-->
+    <!--<div class="left-1">左栏</div>-->
+    <!--<div class="middle-1">中间栏</div>-->
+    <!--<div class="right-1">右栏</div>-->
+<!--</div>-->
 
 <style>
     .left{
@@ -22,13 +22,13 @@
     float: left;
     }
     .right{
-    width: 150px;
+         width: 150px;
         height: 300px;
         background: green;
         float: right;
     }
     .middle{
-    height: 300px;
+        height: 300px;
         background: red;
         margin-left: 220px;
         margin-right: 160px;
