--- a/前端学习第一个月/day29 巩固JS/选项卡.html
+++ b/前端学习第一个月/day29 巩固JS/选项卡.html
@@ -37,7 +37,7 @@
         {
             abtn[i].index=i;                                    //利用JS给index命名=i，来操作div的显示效果
 
-            abtn[i].onmouseover=function ()
+            abtn[i].onclick=function ()
              {                                                      //this指当前发生的元素 在函数里面
                for (var i=0;i<abtn.length;i++)                     //思路很好 遇到问题 直接折射方法
                {
@@ -50,5 +50,6 @@
         }
     }
 </script>
+
 </body>
 </html>
